# Godot-Servo

./: README.md  mingw.txt
.github/workflows/: build.yml
demo/: .gitignore  control.tscn  icon.svg.import  index.html  project.godot
demo/addons/gdservo/: .gdextension  .gdextension.uid
demo/assets/: MaterialSymbolsRounded-VariableFont_FILL,GRAD,opsz,wght.ttf.import
demo/browser/: browser.gd  browser.gd.uid  browser.tscn
demo/tests/cursors/: cursors.gd  cursors.gd.uid  cursors.tscn
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: godot_rendering_context.rs  godot_window_handle.rs  lib.rs  mime.rs  servo_manager.rs  webview_control.rs
